# MusicMachine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
html/: add__block__event_8hpp_source.html  add__element_8hpp_source.html  annotated.html  annotated_dup.js  block_8hpp_source.html  block__manager_8hpp_source.html  block__sprite_8hpp_source.html  camera_8hpp_source.html  class_block-members.html  class_block.html  class_block__coll__graph.map  class_block__coll__graph.md5  class_block__inherit__graph.map  class_block__inherit__graph.md5  class_block_sprite-members.html  class_block_sprite.html  class_event_bus-members.html  class_event_bus.html  class_m_m_1_1_block_port_1_1_pulse_in-members.html  class_m_m_1_1_block_port_1_1_pulse_in.html  class_m_m_1_1_block_port_1_1_pulse_in__coll__graph.md5  class_m_m_1_1_block_port_1_1_pulse_in__inherit__graph.map  class_m_m_1_1_block_port_1_1_pulse_out-members.html  class_m_m_1_1_block_port_1_1_pulse_out.html  class_m_m_1_1_block_port_1_1_pulse_out__coll__graph.map  class_m_m_1_1_block_port_1_1_pulse_out__coll__graph.md5  class_m_m_1_1_block_port_1_1_scalar_in-members.html  class_m_m_1_1_block_port_1_1_scalar_in.html  class_m_m_1_1_block_port_1_1_scalar_in__inherit__graph.map  class_m_m_1_1_block_port_1_1_scalar_in__inherit__graph.md5  class_m_m_1_1_block_port_1_1_scalar_out-members.html  class_m_m_1_1_block_port_1_1_scalar_out.html  class_m_m_1_1_block_port_1_1_scalar_out__coll__graph.map  class_m_m_1_1_block_port_1_1_scalar_out__coll__graph.md5  class_m_m_1_1_block_port_1_1_signal_in-members.html  class_m_m_1_1_block_port_1_1_signal_in.html  class_m_m_1_1_block_port_1_1_signal_in__inherit__graph.map  class_m_m_1_1_block_port_1_1_signal_in__inherit__graph.md5  class_m_m_1_1_block_port_1_1_signal_out-members.html  class_m_m_1_1_block_port_1_1_signal_out.html  (+206 more)
include/: blocks.hpp  camera.hpp  helpers.hpp  modules.hpp  systems.hpp  ui.hpp
latex/: add__block__event_8hpp_source.tex  add__element_8hpp_source.tex  annotated.tex  block_8hpp_source.tex  block__manager_8hpp_source.tex  block__sprite_8hpp_source.tex  camera_8hpp_source.tex  class_block.tex  class_block__coll__graph.md5  class_block__inherit__graph.md5  class_block_sprite.tex  (+76 more)
(+110 files in other folders)
